merge 39595 from trunk
svn path=/projects/container-test-framework/branches/tc-4.0/; revision=39596